[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/script/snake.gd" type="Script" id=1]
[ext_resource path="res://Assets/Snake/snake-head.png" type="Texture" id=2]
[ext_resource path="res://assets/Snake/Dark Grey.PNG" type="Texture" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends Control

var curr_score = 0
var target_score = 10

onready var menu = preload(\"res://src/scene/Settings Tab.tscn\")

# Called when the node enters the scene tree for the first time.
func _ready():
	self.connect(\"endgame\",self,\"collision_detected\")
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	if target_score == curr_score:
		$NinePatchRect/score_lbl.text = \"Completed!\"
	pass

func _on_Snake_increase_score():
	curr_score += 1
	$NinePatchRect/score_lbl.text = \"Score: \" + str(curr_score)
	pass # Replace with function body.

func collision_detected():
	print(\"game ended\")
	
	pass

func _on_wall_left_area_entered(area):
	if (area.name == \"head\"):
		collision_detected()
	pass # Replace with function body.


func _on_wall_right_area_entered(area):
	if (area.name == \"head\"):
		collision_detected()
	pass # Replace with function body.


func _on_wall_top_area_entered(area):
	if (area.name == \"head\"):
		collision_detected()
	pass # Replace with function body.


func _on_wall_bottom_area_entered(area):
	if (area.name == \"head\"):
		collision_detected()
	pass # Replace with function body.
"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.4452, 25.1362 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 300 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 512, 10 )

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
margin_left = 1.25995
margin_right = 1025.26
margin_bottom = 600.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_lbl" type="Label" parent="Control/NinePatchRect"]
margin_left = 871.765
margin_top = 1.1677
margin_right = 1021.76
margin_bottom = 31.1677
rect_min_size = Vector2( 150, 30 )
text = "Score: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Snake" type="Node2D" parent="Control"]
position = Vector2( 200, 200 )
script = ExtResource( 1 )

[node name="head" type="Area2D" parent="Control/Snake"]

[node name="Sprite" type="Sprite" parent="Control/Snake/head"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Snake/head"]
position = Vector2( -0.235962, 0 )
shape = SubResource( 2 )

[node name="wall_left" type="Area2D" parent="Control"]

[node name="wall_left" type="CollisionShape2D" parent="Control/wall_left"]
position = Vector2( -10, 301 )
shape = SubResource( 3 )

[node name="wall_right" type="Area2D" parent="Control"]

[node name="wall_right" type="CollisionShape2D" parent="Control/wall_right"]
position = Vector2( 1034, 300 )
shape = SubResource( 4 )

[node name="wall_top" type="Area2D" parent="Control"]

[node name="wall_top" type="CollisionShape2D" parent="Control/wall_top"]
position = Vector2( 512, -10 )
shape = SubResource( 5 )

[node name="wall_bottom" type="Area2D" parent="Control"]

[node name="wall_bottom" type="CollisionShape2D" parent="Control/wall_bottom"]
position = Vector2( 512, 610 )
shape = SubResource( 6 )

[connection signal="increase_score" from="Control/Snake" to="Control" method="_on_Snake_increase_score"]
[connection signal="area_entered" from="Control/Snake/head" to="Control" method="_on_head_area_entered"]
[connection signal="area_entered" from="Control/wall_left" to="Control" method="_on_wall_left_area_entered"]
[connection signal="area_entered" from="Control/wall_right" to="Control" method="_on_wall_right_area_entered"]
[connection signal="area_entered" from="Control/wall_top" to="Control" method="_on_wall_top_area_entered"]
[connection signal="area_entered" from="Control/wall_bottom" to="Control" method="_on_wall_bottom_area_entered"]
